fix: serachbar alignment, dropdown z-index, make toggle units button more obvious

--- a/src/components/CitySearch/city-search.css
+++ b/src/components/CitySearch/city-search.css
@@ -86,7 +86,6 @@
   }
   .input-container {
     width: 100%;
-    height: 40px;
 
     input {
       height: 50px;
