--- a/src/components/UnitsDropdown/units-dropdown.css
+++ b/src/components/UnitsDropdown/units-dropdown.css
@@ -5,14 +5,15 @@
 .toggle-button {
   width: 100%;
   text-align: left;
-  background: none;
-  border: none;
+  background-color: var(--neutral-500);
+  border: 1px solid var(--border-color);
+  border-radius: var(--radius-sm);
   color: var(--text-main);
   padding: 12px;
   font-size: 1rem;
   cursor: pointer;
-  border-bottom: 1px solid var(--border-sep);
   margin-bottom: 8px;
+  font-weight: 800;
   &:hover {
     background-color: var(--glass-hover);
   }
