--- a/src/components/shared/Dropdown/dropdown.css
+++ b/src/components/shared/Dropdown/dropdown.css
@@ -26,7 +26,7 @@
   margin-top: 0.5rem;
   right: 0;
   width: 150px;
-  z-index: 1;
+  z-index: 2;
   background-color: var(--glass-bg);
   border-radius: var(--radius-sm);
   border: 1px solid var(--border-color);
